--- a/src/app/map-view/map-view.component.html
+++ b/src/app/map-view/map-view.component.html
@@ -1,1 +1,1 @@
-<div id="regions_div" style="width: 500px; height: 500px;"></div>
+<google-chart [type]="'GoeChart'" [data]="myData" [width]="500" [height]="500" [columnNames]="myColumnNames"></google-chart>
