--- a/src/app/simulation-control/simulation-control.component.html
+++ b/src/app/simulation-control/simulation-control.component.html
@@ -1,1 +1,12 @@
+<mat-label>Beta</mat-label><input matInput type="number" [(ngModel)]="beta" /> <br />
+<mat-label>Gamma</mat-label><input matInput type="number" [(ngModel)]="gamma" /> <br />
+<mat-label>Step Length</mat-label><input matInput type="number" [(ngModel)]="stepLength" /> <br />
+<mat-label>Time Span</mat-label><input matInput type="number" [(ngModel)]="endTime" /><br />
 <button (click)="run()">Run the simulation!</button>
+<br /> <br />
+<mat-progress-bar
+          class="example-margin"
+          [color]="color"
+          [mode]="mode"
+          [value]="simulation.progress">
+      </mat-progress-bar>
