--- a/src/app/map-view/map-view.component.html
+++ b/src/app/map-view/map-view.component.html
@@ -1,1 +1,1 @@
-<google-chart [type]="'GoeChart'" [data]="myData" [width]="500" [height]="500" [columnNames]="myColumnNames"></google-chart>
+<div id="myDiv"></div>
