--- a/src/app/simulation-control/simulation-control.component.html
+++ b/src/app/simulation-control/simulation-control.component.html
@@ -2,6 +2,7 @@
 <mat-form-field><mat-label>Gamma</mat-label><input matInput type="number" [(ngModel)]="gamma" /> </mat-form-field> <br>
 <mat-form-field><mat-label>Step Length</mat-label><input matInput type="number" [(ngModel)]="stepLength" /> </mat-form-field><br>
 <mat-form-field><mat-label>Time Span</mat-label><input matInput type="number" [(ngModel)]="endTime" /></mat-form-field><br>
+<mat-form-field><mat-label>Mortality Rate</mat-label><input matInput type="number" [(ngModel)]="mortality" /></mat-form-field><br>
 <button mat-raised-button color="primary" (click)="run()">Run the simulation!</button> <br />
 
 <mat-progress-bar
