--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
-<div fxLayout="row" fxLayoutAlign="space-between">
-    <app-map-view></app-map-view>
-    <app-simulation-control></app-simulation-control>
-</div>
-
-<div fxLayout="row" fxLayoutAlign="space-between">
-    <app-chart-view></app-chart-view>
-    <app-chart-view></app-chart-view>
-    <app-chart-view></app-chart-view>
+<div class="grid">
+    <header class="header"><app-header></app-header></header>
+    <aside class="sidenav"><app-sidenav></app-sidenav></aside>
+    <main class="main"><router-outlet></router-outlet></main>
+    <footer class="footer"></footer>
 </div>
