Some more layout. Added font awesome, more work in functionality required. Icons added.

--- a/src/app/numerical-settings/numerical-settings.component.html
+++ b/src/app/numerical-settings/numerical-settings.component.html
@@ -1,1 +1,6 @@
-<p>numerical-settings works!</p>
+<mat-form-field>
+    <mat-label>Step Length</mat-label><input matInput type="number" [(ngModel)]="simulation.timeStepLength" />
+</mat-form-field><br>
+<mat-form-field>
+    <mat-label>Time Span</mat-label><input matInput type="number" [(ngModel)]="simulation.timeSpan" />
+</mat-form-field><br>
