--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,9 +1,45 @@
+<div class="sidenav__brand">
+  <img src="../../assets/logo_large.png" width="250px" />
+</div>
 <div class="row row--align-v-center row--align-h-center">
-<ul class="sidenav__list navlistt">
-    <li class="sidenav__list-item"><a routerLink="setup">Simulation Settings</a></li>
-    <li class="sidenav__list-item"><a routerLink="world">Global Results</a></li>
-    <li class="sidenav__list-item"><a routerLink="country">Country Results</a></li>
-    <li class="sidenav__list-item"><a routerLink="math">Mathematical Details</a></li>
-    <li class="sidenav__list-item"><a routerLink="about">About</a></li>
+  <ul class="navlist">
+    <li class="navList__heading">Settings<i class="far fa-file-alt"></i></li>
+    <li>
+      <a routerLink="setup">
+        <div class="navList__subheading row row--align-v-center">
+          <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+          <span class="navList__subheading-title">Simulation Settings</span>
+        </div>
+      </a>
+    </li>
+    <li class="navList__heading">Results<i class="far fa-file-alt"></i></li>
+    <li><a routerLink="world">
+        <div class="navList__subheading row row--align-v-center">
+          <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+          <span class="navList__subheading-title">Global Results</span>
+        </div>
+      </a>
+    </li>
+    <li><a routerLink="country">
+        <div class="navList__subheading row row--align-v-center">
+          <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+          <span class="navList__subheading-title">Country Results</span>
+        </div>
+      </a>
+    </li>
+    <li><a routerLink="math">
+        <div class="navList__subheading row row--align-v-center">
+          <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+          <span class="navList__subheading-title">Mathematical Details</span>
+        </div>
+      </a>
+    </li>
+    <li><a routerLink="about">
+        <div class="navList__subheading row row--align-v-center">
+          <span class="navList__subheading-icon"><i class="fas fa-briefcase-medical"></i></span>
+          <span class="navList__subheading-title">About</span>
+        </div>
+      </a>
+    </li>
   </ul>
 </div>
