--- a/src/app/simulation-control/simulation-control.component.html
+++ b/src/app/simulation-control/simulation-control.component.html
@@ -1,5 +1,5 @@
 <div class="main-overview">
-  <div class="overviewCard">
+  <div class="overviewCard" (click)="runSimulation()">
     <div class="overviewCard-icon overviewCard-icon--document">
        <i class="far fa-file-alt"></i>
     </div>
