--- a/src/app/map-view/map-view.component.html
+++ b/src/app/map-view/map-view.component.html
@@ -1,15 +1,15 @@
-<div style="width: 900px; height: 500px;" id="myDiv"></div>
+<div style="width: 100%; height: 600px;" id="myDiv"></div>
 <button mat-raised-button color="primary" (click)="visualize()">Run full animation</button> <br />
 <button mat-raised-button color="primary" (click)="draw()">Draw single frame</button> <br />
 <mat-slider
-        class="example-margin"
-        [disabled]="disabled"
-        [invert]="invert"
-        [max]="max"
-        [min]="min"
-        [step]="step"
-        [thumbLabel]="thumbLabel"
-        [tickInterval]="tickInterval"
-        [(ngModel)]="currentTime"
-        [vertical]="vertical">
-    </mat-slider>
+    class="example-margin"
+    [disabled]="disabled"
+    [invert]="invert"
+    [max]="max"
+    [min]="min"
+    [step]="step"
+    [thumbLabel]="thumbLabel"
+    [tickInterval]="tickInterval"
+    [(ngModel)]="currentTime"
+    [vertical]="vertical">
+</mat-slider>
