--- a/src/app/simulation-control/simulation-control.component.html
+++ b/src/app/simulation-control/simulation-control.component.html
@@ -1,38 +1,38 @@
 <div class="main-overview">
   <div class="overviewCard" (click)="runSimulation()">
-    <div class="overviewCard-icon overviewCard-icon--document">
-       <i class="far fa-file-alt"></i>
+    <div class="overviewCard-icon overviewCard-icon--calendar">
+      <fa-icon [icon]="faPlay"></fa-icon>
     </div>
     <div class="overviewCard-description">
       <h3 class="overviewCard-title text-light"><strong>Run</strong> the simulation</h3>
       <p class="overviewCard-subtitle"></p>
     </div>
   </div>
-  <div class="overviewCard">
-    <div class="overviewCard-icon overviewCard-icon--calendar">
-       <i class="far fa-calendar-check"></i>
+  <div class="overviewCard" (click)="setCoronaDefault()">
+    <div class="overviewCard-icon overviewCard-icon--document">
+      <fa-icon [icon]="faBH"></fa-icon>
+    </div>
+    <div class="overviewCard-description">
+      <h3 class="overviewCard-title text-light"><strong>Corona Virus</strong> Preset</h3>
+      <p class="overviewCard-subtitle"></p>
+    </div>
+  </div>
+  <div class="overviewCard" (click)="setMeaselesZeroVac()">
+    <div class="overviewCard-icon overviewCard-icon--mail">
+      <fa-icon [icon]="faSuC"></fa-icon>
     </div>
     <div class="overviewCard-description">
       <h3 class="overviewCard-title text-light"><strong>Measles</strong> Preset I</h3>
       <p class="overviewCard-subtitle">with 0% vaccination</p>
     </div>
   </div>
-  <div class="overviewCard">
-    <div class="overviewCard-icon overviewCard-icon--mail">
-       <i class="far fa-envelope"></i>
+  <div class="overviewCard" (click)="setMeaselesHighVac()">
+    <div class="overviewCard-icon overviewCard-icon--calendar">
+      <fa-icon [icon]="faE"></fa-icon>
     </div>
     <div class="overviewCard-description">
       <h3 class="overviewCard-title text-light"><strong>Measles</strong> Preset II</h3>
-      <p class="overviewCard-subtitle">with 90% vaccination</p>
-    </div>
-  </div>
-  <div class="overviewCard">
-    <div class="overviewCard-icon overviewCard-icon--photo">
-       <i class="far fa-file-image"></i>
-    </div>
-    <div class="overviewCard-description">
-      <h3 class="overviewCard-title text-light"><strong>Corona Virus</strong> Preset</h3>
-      <p class="overviewCard-subtitle"></p>
+      <p class="overviewCard-subtitle">with 95% vaccination</p>
     </div>
   </div>
 </div>
@@ -64,21 +64,7 @@
       <app-numerical-settings></app-numerical-settings>
     </div>
   </div>
-  <div class="card">
-    <div class="card__header">
-      <div class="card__header-title text-light"><strong>Initial Infections</strong>
-        <a href="#" class="card__header-link text-bold">View All</a>
-        <a href="#" class="card__header-link text-bold">View Less</a>
-      </div>
-      <div class="settings">
-        <div class="settings__block"><i class="fas fa-edit"></i></div>
-        <div class="settings__block"><i class="fas fa-cog"></i></div>
-      </div>
-    </div>
-    <div class="card__main">
-      <app-initial-infection></app-initial-infection>
-    </div>
-  </div>
+  <app-initial-infection></app-initial-infection>
   <div class="card card--finance">
     <div class="card__header">
       <div class="card__header-title text-light"><strong>Response Settings</strong>
