--- a/src/app/disease-parameter-settings/disease-parameter-settings.component.html
+++ b/src/app/disease-parameter-settings/disease-parameter-settings.component.html
@@ -1,3 +1,4 @@
+<p>You can either set these values manually or load one of the presets above. Then click <i>"Run the simulation"</i> and wait for it to finish. Afterwards, the views listing <a routerLink="world">global</a> and <a routerLink="country">country</a> details will be available.</p>
 <mat-form-field>
     <mat-label>Beta </mat-label>
     <input matInput type="number" [(ngModel)]="simulation.beta" /> 
