--- a/src/app/math/math.component.html
+++ b/src/app/math/math.component.html
@@ -1,1 +1,14 @@
-<p>math works!</p>
+
+<div class="main__cards">
+    <div class="card">
+      <div class="card__header">
+        <div class="card__header-title text-light"><strong>Virus Settings</strong>
+        </div>
+        <div class="settings">
+        </div>
+      </div>
+      <div class="card__main">
+        You can find a complete introduction to the topic of SIR-networks in <a href="https://epubs.siam.org/doi/abs/10.1137/140996148">this publication</a> or in my article on the topic: <a href="https://light-and-code.com/?p=39">Modeling the spread of dengue fever</a>.
+      </div>
+    </div>
+</div>
