--- a/src/app/simulation-control/simulation-control.component.html
+++ b/src/app/simulation-control/simulation-control.component.html
@@ -43,8 +43,7 @@
       <div class="card__header-title text-light"><strong>Virus Settings</strong>
       </div>
       <div class="settings">
-        <div class="settings__block"><i class="fas fa-edit"></i></div>
-        <div class="settings__block"><i class="fas fa-cog"></i></div>
+        <div class="settings__block"><fa-icon [icon]="faE" matTooltip="Here you can specify the settings for the disease. This includes how fast it spreads and how long it remains infectious."></fa-icon></div>
       </div>
     </div>
     <div class="card__main">
@@ -56,8 +55,7 @@
       <div class="card__header-title text-light"><strong>Numerical Settings</strong>
       </div>
       <div class="settings">
-        <div class="settings__block"><i class="fas fa-edit"></i></div>
-        <div class="settings__block"><i class="fas fa-cog"></i></div>
+        <div class="settings__block"><fa-icon [icon]="faE" matTooltip="These settings are for the numerical simulation. The lenght of the time step and the total lenght of the simulation determine accuracy and runtime of the algorithm."></fa-icon></div>
       </div>
     </div>
     <div class="card__main">
@@ -70,8 +68,7 @@
       <div class="card__header-title text-light"><strong>Response Settings</strong>
       </div>
       <div class="settings">
-        <div class="settings__block"><i class="fas fa-edit"></i></div>
-        <div class="settings__block"><i class="fas fa-cog"></i></div>
+        <div class="settings__block"><fa-icon [icon]="faE" matTooltip="The Response Settings determine the effect in and reaction of a country to a disease. The moratlity describes how many people die once infected and the critical parameters determine the impact of the local healt care system on the disease mortality."></fa-icon></div>
       </div>
     </div>
     <div class="card__main">
