--- a/src/app/chart-view/chart-view.component.html
+++ b/src/app/chart-view/chart-view.component.html
@@ -1,20 +1,70 @@
-<angular2-multiselect [data]="dropdownList" [(ngModel)]="selectedItems" 
-    [settings]="dropdownSettings" 
-    (onSelect)="updateChart()" 
-    (onDeSelect)="updateChart()"
-    ></angular2-multiselect>
-<angular2-multiselect [data]="valueTypes" [(ngModel)]="selectedViewTypes" 
-[settings]="dropdownSettings2" 
-(onSelect)="updateChart()" 
-(onDeSelect)="updateChart()"
-></angular2-multiselect>
-<mat-slide-toggle
+<div class="main__cards">
+  <div class="card">
+    <div class="card__header">
+      <div class="card__header-title text-light"><strong>General Information</strong>
+      </div>
+      <div class="settings">
+        <div class="settings__block"><i class="fas fa-edit"></i></div>
+        <div class="settings__block"><i class="fas fa-cog"></i></div>
+      </div>
+    </div>
+    <div class="card__main">
+      <p>This view gives detailed information about the development in a single or few countries. You can select which countries in the Visualization Details box.</p>
+      <p>You have the option to show the three major and one minor patient groups:</p>
+      <ul>
+        <li><strong>Susceptible</strong>: The patients who have not been infected yet.</li>
+        <li><strong>Infected</strong>: The patients who have been infected.</li>
+        <li><strong>Recovered</strong>: The patients who can no longer infect anyone. This group has the sub-group of <i>fatalities</i>, i.e. the patients who have died from the disease.</li>
+      </ul>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card__header">
+      <div class="card__header-title text-light"><strong>Development over time</strong>
+      </div>
+      <div class="settings">
+        <div class="settings__block"><i class="fas fa-edit"></i></div>
+        <div class="settings__block"><i class="fas fa-cog"></i></div>
+      </div>
+    </div>
+    <div class="card__main">
+      <div [chart]="chart"></div>  
+    </div>
+  </div>
+  <div class="card">
+      <div class="card__header">
+        <div class="card__header-title text-light"><strong>Visualization Details</strong>
+        </div>
+        <div class="settings">
+          <div class="settings__block"><i class="fas fa-edit"></i></div>
+          <div class="settings__block"><i class="fas fa-cog"></i></div>
+        </div>
+      </div>
+      <div class="card__main">
+        Select one or multiple countries: <br />
+        <angular2-multiselect 
+          [data]="dropdownList"
+          [(ngModel)]="selectedItems" 
+          [settings]="dropdownSettings" 
+          (onSelect)="updateChart()" 
+          (onDeSelect)="updateChart()"
+          ></angular2-multiselect> <br />
+        Select patient groups:  <br />
+        <angular2-multiselect 
+          [data]="valueTypes" 
+          [(ngModel)]="selectedViewTypes" 
+          [settings]="dropdownSettings2" 
+          (onSelect)="updateChart()" 
+          (onDeSelect)="updateChart()"
+        ></angular2-multiselect> <br />
+        <mat-slide-toggle
           class=""
           [disabled]="false"
           (change)="updateChart()"
           [(ngModel)]="showRate">
-  Show Rate
-</mat-slide-toggle>
-
-<div [chart]="chart"></div>
+          Show Rate
+        </mat-slide-toggle>
+      </div>
+  </div>
+</div>
 
