--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="sidenav__brand">
-  <a href="/"><img src="../../assets/logo_large.png" width="250px" /></a>
+  <a href="/"><img src="./assets/logo_large.png" width="250px" /></a>
 </div>
 <div class="row row--align-v-center row--align-h-center">
   <ul class="navlist">
