Removing list item marker and reducing app size.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,10 @@ a {
   }
 }
 
+li.sidenav {
+  list-style: none;
+}
+
 // Establish dashboard css grid layout - mobile
 .grid {
   position: relative;
